package creational.abstractFactory.interfaces;

public interface AbstractFactory {
  AbstractItem createProduct();
}
