package creational.abstractFactory.interfaces;

public interface AbstractItem {
  String operation();
}
