package creational.abstractFactory.interfaces;

public abstract class Product {

  public abstract String operation();
}
